<resources>
    <string name="app_name">Jupiter Platform</string>
    <string name="header">Jupiter Platform</string>
    <string name="rateInfo">Please take a few minutes to tell us how we are doing with your web site.I review each and every one of those
    surveys personally to make sure are providing the best service possible.If you have any questions about ANYTHING related to online marketing,feel free to reach out me at the given number below. Thanks, Evan
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="comment_hint"><font size="15">Comment</font></string>
    <string name="first_name_hint"><font size="15">First Name (Required)</font></string>
    <string name="last_name_hint"><font size="15">Last Name (Required)</font></string>
    <string name="street_hint"><font size="15">Street</font></string>
    <string name="state_hint"><font size="15">State</font></string>
    <string name="city_hint"><font size="15">City</font></string>
    <string name="zip_hint"><font size="15">Zip</font></string>
    <string name="phone_hint"><font size="15">Phone</font></string>
    <string name="email_hint"><font size="15">Email</font></string>
    <string name="photo_hint"><font size="15">Photo Title</font></string>
    <string name="location_hint"><font size="15">Location</font></string>
    <string name="description_hint"><font size="15">Description</font></string>
    <string name="review_greetings"><font size="15">Thank you for completing your survey.We appreciate your time.\n\nNothing makes us happier than our client dominate their marketplace.We are very competitive and we enjoy the challenge of generating business one the web.We love working with your site and we will continue to kick\n#@#$!!\n\nThanks again for choosing us to market your site,\nCentral Station Marketing Team :)</font></string>
    <string name="about_statement">The Jupiter Platform App is Central Station Marketing’s highly advanced phone app that empowers users to perform a variety of direct tasks for their business in real time. This dynamic and user-friendly app is exclusive to clients as a way to directly connect through the CMS (content management system) and implement important functions on the Central Station Marketing dashboard specific to their company. Users can upload photos and videos, check on analytics for leads and respond directly to events going on with their business. This app literally puts the power into clients hands.</string>
</resources>