<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CreateLeadActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:gravity="center"

        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#6cb53f">

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:text="Create Lead"
            android:textColor="#6cb53f"
            android:textSize="16dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/back"
            android:drawableLeft="@drawable/back"
            android:padding="6dp"
            android:text="Back"
            android:textColor="@color/White" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/xLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/first_name_hint"
            android:inputType="text"
            android:padding="5dp"

            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp"

            />

        <EditText
            android:id="@+id/lastNameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/last_name_hint"
            android:inputType="text"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/streetEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/street_hint"
            android:inputType="text"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp"

            />

        <EditText
            android:id="@+id/cityEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/city_hint"
            android:inputType="text"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/stateEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/state_hint"
            android:inputType="text"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/zipEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/zip_hint"
            android:inputType="number"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp"

            />

        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/emaillEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/commentEdit"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/comment_hint"
            android:inputType="text"
            android:padding="5dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"

        android:orientation="horizontal">

        <Button
            android:id="@+id/createLeadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="Create Lead"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>