<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".TakeImageActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:gravity="center"

        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#6cb53f">

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:padding="8dp"
            android:text="Take Image"
            android:textColor="#6cb53f" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/back"
            android:drawableLeft="@drawable/back"
            android:padding="6dp"
            android:text="Back"
            android:textColor="@color/White" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tookImageView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/placeholder" />

        <EditText
            android:id="@+id/photoTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:background="@drawable/pass_edit_textn_new"
            android:hint="@string/photo_hint"
            android:padding="10dp" />

        <TextView
            android:id="@+id/photoLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:background="@drawable/pass_edit_textn_new"
            android:hint="@string/location_hint"
            android:padding="10dp" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/pass_edit_textn_new"
            android:gravity="left"
            android:hint="@string/description_hint"
            android:textSize="14dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight=".1">

        <ImageView
            android:id="@+id/gallerybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_library" />

        <Button
            android:id="@+id/sendImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/send_button_shape"
            android:text="Send" />


        <ImageView
            android:id="@+id/addPhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:paddingRight="10dp"
            android:src="@drawable/ic_camera" />


    </RelativeLayout>
</LinearLayout>